fix: adaptive fixes; gaps fixes

--- a/src/style/components/people-filter/people-filter.css
+++ b/src/style/components/people-filter/people-filter.css
@@ -192,7 +192,7 @@
     background-color: #fff;
 }
 
-@media screen and (width <= 768px) {
+@media screen and (width <= 1440px) {
     .people-filter {
         inline-size: 100%;
         padding: 37px 36px 34px;
@@ -256,7 +256,7 @@
     }
 }
 
-@media screen and (width <= 320px) {
+@media screen and (width <= 768px) {
     .people-filter {
         padding: 26px;
     }
